[package]
name = "mini-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
ipnetwork = "0.21.1"
nix = { version = "0.31.3", features = [
  "sched",
  "mount",
  "process",
  "fs",
  "hostname",
] }
rtnetlink = "0.21.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
nftables = "0.6.3"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
clap = { version = "4.6.1", features = ["derive"] }
uuid = { version = "1.23.4", features = ["v4"] }
